--- a/index.html
+++ b/index.html
@@ -15,22 +15,10 @@
     <title>weather</title>
 </head>
 <body>
-<div class="container my-5">
-    <h1 class="text-center title"> Weather in</h1>
-    <form class="search-location">
-        <input type="text" name="city" placeholder="what city ? " autocomplete="off" class="form-control text-muted form-rounded p-4  shadow-sm" />
-        <button type="submit">Go</button>
-    </form>
-    <div class="card rounded my-3 shadow-lg black-card">
-
-    </div>
-</div>
-
-
- <!-- <form action="/" method="post">
+ <form action="/" method="post">
     <label for="cityInput">CityName:</label>
     <input id="cityInput" type="text" name="cityname">
     <button type="submit">Go</button>
-</form> -->
+</form>
 </body>
 </html>
