--- a/index.html
+++ b/index.html
@@ -1,24 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="style.css">
-    <title>weather</title>
-</head>
-<body>
- <form action="/" method="post">
-    <label for="cityInput">CityName:</label>
-    <input id="cityInput" type="text" name="cityname">
-    <button type="submit">Go</button>
-</form>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Weather in App</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <div class="container my-5">
+      <h1 class="text-center title">Weather in</h1>
+      <form class="search-loaction">
+        <input
+          type="text"
+          name="city"
+          placeholder="What city?"
+          autocomplete="off"
+          class="form-control text-muted form-rounded p-4 shadow-sm"
+        />
+      </form>
+
+      <div class="card rounded my-3 shadow-lg d-none back-card">
+        <div class="card-top text-center">
+          <div class="city-name my-3">
+            <p>Abuja</p>
+            <span>...</span>
+          </div>
+          <img src="img/night_image.svg" alt="" class="card-img-top time" />
+        </div>
+
+        <div class="card-body">
+          <div class="card-mid row">
+            <div class="col-8 text-center temp">
+              <span>30&deg;C</span>
+            </div>
+            <div class="col-4 condition-temp">
+              <p class="condition">Thunder Storm</p>
+              <p class="high">30&deg;C</p>
+              <p class="low">27&deg;C</p>
+            </div>
+          </div>
+
+          <div class="icon-container card shadow mx-auto">
+            <img src="img/cloud.svg" alt="" />
+          </div>
+          <div class="card-bottom px-5 py-4 row">
+            <div class="col text-center">
+              <p>30&deg;C</p>
+              <span>Feels Like</span>
+            </div>
+            <div class="col text-center">
+              <p>55%</p>
+              <span>Humidity</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="javascript/request.js"></script>
+    <script src="javascript/index.js"></script>
+  </body>
 </html>
